--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,12 @@
 
 <body ng-app="app">
 
+  <weather></weather>
+
   <script src="vendors/angular/angular.js" type="text/javascript"></script>
   <script src="js/app.js" type="text/javascript"></script>
+  <script src="js/services/WeatherService.js"></script>
+  <script src="js/components/weather.js"></script>
 
 </body>
 
