tests show webcam

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,16 @@
 <body ng-app="app">
   <webcams>
   </webcams>
-
-
+ <!--  <a name="lkr-timelapse-player"
+  data-id="1178148742"
+  data-play="day"
+  href="https://lookr.com/1178148742"
+  target="_blank">
+  Nom de la ville
+</a> -->
   <script src="vendors/angular/angular.js" type="text/javascript"></script>
+  <script async type="text/javascript" src="js/player.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
-  <script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script>
   <script src="js/components/webcamComponent.js"></script>
   <script src="js/services/WebcamsService.js"></script>
 </body>
