--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,18 @@
 
 <body ng-app="app">
   <webcams>
+      <!-- <a name="lkr-timelapse-player"
+      data-id="1178148742"
+      data-play="day"
+      href="https://lookr.com/1178148742"
+      target="_blank">
+      Nom de la ville
+    </a> -->
   </webcams>
 
 
   <weather></weather>
-
+  
   <script src="vendors/angular/angular.js" type="text/javascript"></script>
   <script src="js/app.js" type="text/javascript"></script>
   <script src="js/services/WeatherService.js"></script>
