--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body ng-app="app">
   <webcams>
   </webcams>
-
+<weather></weather>
   <script src="vendors/angular/angular.js" type="text/javascript"></script>
   <script async type="text/javascript" src="js/player.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
