Almost working, go to the front…

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   <script src="js/components/weather.js"></script>
 
   <script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script>
-  <script src="js/components/webcamComponent.js"></script>
-  <script src="js/services/WebcamsService.js"></script>
+  <!-- <script src="js/components/webcamComponent.js"></script>
+  <script src="js/services/WebcamsService.js"></script> -->
 </body>
 
 </html>
