--- a/public/index.html
+++ b/public/index.html
@@ -52,14 +52,13 @@
 
 
 
-
   <script src="vendors/angular/angular.js" type="text/javascript"></script>
   <script async type="text/javascript" src="js/player.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
   <script src="js/components/weather.js"></script>
   <script src="js/services/WeatherService.js"></script>
 
-  <script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script>
+  <script async type="text/javascript" src="js/player.js"></script>
   <!-- <script src="js/components/webcamComponent.js"></script>
   <script src="js/services/WebcamsService.js"></script> -->
 </body>
