--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="icon" type="image/png" href="imgs/logo.png" />
   <link rel="stylesheet" href="vendors/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/index.css">
   <title>La météo de 20h</title>
+  
 </head>
 
 <body ng-app="app">
@@ -21,7 +22,7 @@
   <div class="footer-bottom navbar-fixed-bottom">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 widget">© 2017 | Created by Brainbulz and m1roh
+        <div class="col-md-12 widget">© 2017 | Created by Brainlulz and m1roh
         </div>
       </div>
     </div>
