Background switch resolved

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <title>La météo de 20h</title>
 </head>
 
-<body ng-app="app">
+<body ng-app="app" ng-class="{sunnybg: $ctrl.sunnybg}">
 <header>
     
     <h1 class="fontsteel">Live Weather Wild App</h1>
@@ -21,7 +21,7 @@
   <div class="footer-bottom navbar-fixed-bottom">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 widget">© 2017 | Created by Brainbulz and m1roh
+        <div class="col-md-12 widget">© 2017 | Created by Brainlulz and m1roh
         </div>
       </div>
     </div>
