--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <div class="footer-bottom navbar-fixed-bottom">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 widget">© 2017 | Created by Brainlulz and m1roh
+        <div class="red col-md-12 widget">© 2017 | Created by Brainlulz and m1roh
         </div>
       </div>
     </div>
